--- a/data/style.css
+++ b/data/style.css
@@ -18,12 +18,12 @@ html, body {
   /* || typography */
   
   h1, h2, h3 {
-    font-family: 'Sonsie One', cursive;
+    font-family: math;
     color: #2a2a2a;
   }
   
   p, input, li {
-    font-family: 'Open Sans Condensed', sans-serif;
+    font-family: math;
     color: #2a2a2a;
   }
   
@@ -125,9 +125,22 @@ html, body {
   }
   
   aside li {
-    padding-bottom: 10px;
+    padding-bottom: 5px;
   }
   
   footer {
     margin-top: 10px;
+  }
+
+  button {
+    background-color: #4e2456; 
+    border: none;
+    color: white;
+    padding: 10px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+    margin: 5px;
+    width: 90%;
   }
