--- a/data/style.css
+++ b/data/style.css
@@ -4,7 +4,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: Garamond, serif;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 html {
@@ -89,13 +89,13 @@ nav li {
   display: inline;
   text-align: center;
   flex: 1;
-  margin-top: -5px;
+  margin-top: -10px;
   width: 20%;
 }
 
 nav a {
   display: inline-block;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
   font-weight: bold;
   color: black;
@@ -154,6 +154,7 @@ aside li {
 aside h3 {
   text-align: center;
   margin: 10px;
+  font-size:16px;
 }
 
 footer {
@@ -208,4 +209,17 @@ img.icon {
 pre {
   background-color: lightsteelblue;
   padding:10px;
+}
+
+label {
+  font: 14px 'Fira Sans', sans-serif;
+  margin-top: 2px;
+  margin-left: 2px;
+  vertical-align: middle;
+}
+
+input {
+  margin-top: 2px;
+  margin-left: 15px;
+  vertical-align: middle;
 }
