--- a/data/style.css
+++ b/data/style.css
@@ -45,6 +45,7 @@ h1 {
 h2 {
   font-size: 2rem;
   text-align: left;
+  margin: 5px;;
 }
 
 h3 {
@@ -178,10 +179,10 @@ aside button {
 }
 
 article button {
-  background-color: #4e2456;
+  background-color:#fac9fa;
+  color: #000000;
   border: none;
-  color: white;
-  padding: 10px 32px;
+  padding: 5px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
