--- a/data/style.css
+++ b/data/style.css
@@ -52,7 +52,7 @@ h3 {
   font-size: 1.2rem;
 }
 
-li {
+li.menu {
   font-size: 1.6rem;
   line-height: 1.5;
 }
@@ -111,7 +111,7 @@ nav form {
 }
 
 input {
-  font-size: 1.6rem;
+  font-size: 1rem;
   height: 32px;
 }
 
